# amera

./: .gitignore  MANIFEST.in  README.md  setup.cfg
amera/: .gitignore  __main__.py
amera/app/: __init__.py
app/: nuxt.config.js  package.json
app/assets/stylesheets/: main.scss
app/pages/: index.vue
tests/: __init__.py
