[metadata]
name = amera
version = 0.1.0
author = Mohammad Farahmand
home-page = https://github.com/farahmand-m/amera
description = Machine Learning Project Management
long-description = file: README.md
license = MIT
platform = any
keywords = deep learning, machine learning, experiment tracking, hyperparameter, logging

[options]
packages =
    amera
    amera.app
zip_safe = false
python_requires = ~=3.7.6
install_requires =
include_package_data = true

[options.entry_points]
console_scripts =
    amera = amera.app:setup
